<?xml version="1.0" encoding="UTF-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:key="General"
            android:title="General">
        <CheckBoxPreference android:key="pref_status_bar_bottom"
            android:title="@string/tablet_tweaks_sb_bottom_title"
            android:summary="@string/tablet_tweaks_sb_bottom_summary"
			android:layout="@layout/alfahmi__preference" />
        <CheckBoxPreference android:key="pref_status_bar_dead_zone"
            android:title="@string/tablet_tweaks_status_bar_dead_zone_title"
            android:summary="@string/tablet_tweaks_status_bar_dead_zone_summary"
            android:dependency="pref_status_bar_bottom" 
			android:layout="@layout/alfahmi__preference" />
        <CheckBoxPreference android:key="pref_soft_buttons_left"
            android:title="@string/tablet_tweaks_soft_buttons_left_title"
            android:summary="@string/tablet_tweaks_soft_buttons_left_summary" 
			android:layout="@layout/alfahmi__preference" />
    </PreferenceCategory>

</PreferenceScreen>
